# DockerServices

./: .gitignore  README.md
CPP/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml
CPP/include/: foo.hpp
CPP/src/: main.cpp
MySQL/: docker-compose.yaml
PHP/: Makefile  docker-compose.yml
PHP/docker/nginx/: default.conf
PHP/docker/php/: Dockerfile.dev
Postgres/: docker-compose.yaml
Redis/: docker-compose.yaml
